2006-07-10	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.5.4beta2 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Depend on libexo 0.3.1.8beta2.
	* THANKS: Add missing translator credits.
	* po/*.po, po-doc/ja.po: Update Project-Id-Version.

2006-07-09	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c: Revert the previous patch, as the
	  new regex cannot be compiled on some systems.

2006-07-01	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c: Apply patch from James Westby
	  <jw+xfce@jameswestby.net> to fix recognition of email addresses
	  with + in the username.

2006-06-13	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Use --as-needed if supported by the linker.
	* terminal/terminal-tab-header.c(terminal_tab_header_init): Use
	  GtkLabel instead of ExoEllipsizedLabel.

2006-05-29	Benedikt Meurer <benny@xfce.org>

	* terminal/main.c(main): VTE is still too buggy to make warnings
	  fatal when compiled with --enable-debug=full.

2006-05-25	Benedikt Meurer <benny@xfce.org>

	* helpers/firefox.desktop.in: Don't forcibly open a new window for
	  Firefox, but do whatever the user configured in Firefox. Bug #1841.

2006-05-20	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences.c(terminal_preferences_set_property):
	  Start with the default value, otherwise several settings will not
	  be saved properly. Bug #1821.

2006-05-20	Benedikt Meurer <benny@xfce.org>

	* terminal/main.c(main): Make warnings fatal if built with
	  --enable-debug=full.

2006-05-20	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-dialogs.{c,h}, terminal/Makefile.am,
	  terminal/terminal-preferences-dialog.c, terminal/terminal-screen.c,
	  terminal/terminal-shortcut-editor.c, terminal/terminal-window.c:
	  Move common dialogs to terminal-dialogs.c.
	* terminal/terminal-window.c(terminal_window_update_actions): If
	  MiscCycleTabs is enabled, the "Previos Tab" and "Next Tab" actions