@@ -12,9 +12,9 @@ dnl ***************************
 m4_define([terminal_version_major], [0])
 m4_define([terminal_version_minor], [2])
 m4_define([terminal_version_micro], [5])
-m4_define([terminal_version_nano], [4])
+m4_define([terminal_version_nano], [5])
 m4_define([terminal_version_build], [@REVISION@])
-m4_define([terminal_version_tag], [beta2])
+m4_define([terminal_version_tag], [svn])
 m4_define([terminal_version_dbus], [3])
 m4_define([terminal_version], [terminal_version_major().terminal_version_minor().terminal_version_micro()ifelse(terminal_version_nano(), [], [], [.terminal_version_nano()])ifelse(terminal_version_tag(), [svn], [terminal_version_tag()-terminal_version_build()], [terminal_version_tag()])])
 
