@@ -1,3 +1,9 @@
+2006-08-09	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in: Post-release version bump.
+	* terminal/terminal-screen.c(terminal_screen_get_working_directory):
+	  Make sure that we use linprocfs on all systems.
+
 2006-07-10	Benedikt Meurer <benny@xfce.org>
 
 	* === Released 0.2.5.4beta2 ===
